# Bannerlord.LauncherManager

./: .gitignore  .gitmodules  Bannerlord.LauncherManager.sln  LICENSE  README.md
src/Bannerlord.LauncherManager.Native.TypeScript/: .clang-format  .cspell.json  .gitignore  .npmignore  CMakeLists.txt  binding.gyp  build.js  commands.ps1  mingw642.cmake  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
src/Bannerlord.LauncherManager.Native.TypeScript/src/: Bannerlord.Common.hpp  Bannerlord.FetchVersion.hpp  Bannerlord.LauncherManager.hpp  Bannerlord.ModuleManager.hpp  Bannerlord.Utils.hpp  BannerlordModuleManager.ts  Common.ts  FetchBannerlordVersion.ts  LauncherManager.ts  Logger.ts  Utils.ts  index.ts  logger.hpp  main.cpp  utils.hpp
src/Bannerlord.LauncherManager.Native.TypeScript/src-native/: Bindings.Common.Implementation.hpp  Bindings.Common.hpp  Bindings.FetchVersion.Implementation.hpp  Bindings.FetchVersion.hpp  Bindings.LauncherManager.Callbacks.hpp  Bindings.LauncherManager.Implementation.hpp  Bindings.LauncherManager.hpp  Bindings.Logging.Callbacks.hpp  Bindings.Logging.Implementation.hpp  Bindings.Logging.hpp  Bindings.ModuleManager.Callbacks.hpp  Bindings.ModuleManager.Implementation.hpp  Bindings.ModuleManager.hpp  Bindings.Utils.Implementation.hpp  Bindings.Utils.hpp  Logger.hpp  Platform.hpp  Utils.Callbacks.hpp  Utils.Converters.hpp  Utils.Generic.hpp  Utils.JS.hpp  Utils.Return.hpp  Utils.Utf.hpp  main.cpp
src/Bannerlord.LauncherManager.Native.TypeScript/test/: BannerlordModuleManager.spec.ts  FetchBannerlordVersion.spec.ts  (+4 more)
(+309 files in other folders)
